--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,15 @@
 			<input type="text" ng-model="query" ng-blur="queryChanged(query)">
 			<h5>Searching for {{main.query}}</h5>
 			<div class="card" ng-repeat="card in cards">
-				<div ng-if="!card.image">
-					{{card.name}}
-				</div>
-				<img ng-if="card.image" src="{{card.image}}">
+				<span ng-if="!card.image">{{card.name}}</span>
+				<img class="card-image" ng-if="card.image" src="{{card.image}}">
 			</div>
 		</div>
 
 		<script src="js/jquery-2.1.1.min.js"></script>
 		<script src="js/socket.io-1.2.1.js"></script>
 		<script src="js/angular.min.js"></script>
+		<script src="js/underscore-min.js"></script>
 		<script src="js/client.js"></script>
 	</body>
 </html>
