--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,13 @@
 			</div>
 		</div>
 
-		<script src="js/jquery-2.1.1.min.js"></script>
-		<script src="js/socket.io-1.2.1.js"></script>
-		<script src="js/angular.min.js"></script>
-		<script src="js/underscore-min.js"></script>
-		<script src="js/client.js"></script>
+		<script src="js/lib/jquery-2.1.1.min.js"></script>
+		<script src="js/lib/socket.io-1.2.1.js"></script>
+		<script src="js/lib/angular.min.js"></script>
+		<script src="js/lib/underscore-min.js"></script>
+
+		<script src="js/lib/underscore-min.js"></script>
+
+		<script src="js/app.js"></script>
 	</body>
 </html>
