--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Dice Masters Cards</title>
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/animations.css">
 	</head>
 	<body ng-app="diceMasters" ng-controller="main" ng-class="{'searching': isSearching()}">
 
