--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	<body ng-app="diceMasters" ng-controller="main" ng-class="{'searching': isSearching()}">
 
 		<div class="deskArea" ng-controller="desk" ng-click="setSearching(false)">
-			<div class="card" ng-repeat="card in getCards()">
+			<div class="card card-animation" ng-repeat="card in getCards()">
 				<div class="card-name" ng-if="!card.image">{{card.name}}</div>
 				<img class="card-image" ng-if="card.image" src="{{card.image}}">
 			</div>
@@ -17,7 +17,7 @@
 
 		<div class="searchArea" ng-controller="search" ng-click="setSearching(true)">
 			<input type="text" class="search-box" ng-model="query" ng-blur="search(query)">
-			<div class="card" ng-repeat="card in getCards()" ng-click="save(card.name)">
+			<div class="card card-animation" ng-repeat="card in getCards()" ng-click="save(card.name)">
 				<div class="card-name" ng-if="!card.image">{{card.name}}</div>
 				<img class="card-image" ng-if="card.image" src="{{card.image}}">
 			</div>
@@ -25,7 +25,8 @@
 
 		<script src="js/lib/jquery-2.1.1.min.js"></script>
 		<script src="js/lib/socket.io-1.2.1.js"></script>
-		<script src="js/lib/angular.min.js"></script>
+		<script src="js/lib/angular.js"></script>
+		<script src="js/lib/angular-animate.js"></script>
 		<script src="js/lib/underscore-min.js"></script>
 
 		<script src="js/lib/underscore-min.js"></script>
