--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,14 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Dice Masters Cards</title>
+		<link rel="stylesheet" href="http://bootswatch.com/simplex/bootstrap.min.css">
+		<link rel="stylesheet" href="css/angular-animations.css">
+		<link rel="stylesheet" href="css/transitions.css">
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/animations.css">
 	</head>
 	<body ng-app="diceMasters" ng-controller="main" ng-class="{'searching': isSearching()}">
+
+		<!-- TODO preload cardback -->
 
 		<div class="deskArea" ng-controller="desk" ng-click="setSearching(false)">
 			<div class="card card-animation" ng-repeat="card in getCards()">
@@ -16,8 +20,12 @@
 		</div>
 
 		<div class="searchArea" ng-controller="search" ng-click="setSearching(true)">
-			<input type="text" class="search-box" ng-model="query" ng-blur="search(query)">
-			<div class="card card-animation" ng-repeat="card in getCards()" ng-click="save(card.name)">
+
+			<div class="form-group search-block">
+				<input type="text" class="search-box form-control input-lg" placeholder="..." ng-model="query" ng-change="searchDebounced(query)" ng-focus="setSearching(true)">
+			</div>
+
+			<div class="card card-animation" ng-repeat="card in getCards()" ng-click="save(card.name)"  ng-class="{'full': card.image}">
 				<div class="card-name" ng-if="!card.image">{{card.name}}</div>
 				<img class="card-image" ng-if="card.image" src="{{card.image}}">
 			</div>
@@ -27,8 +35,6 @@
 		<script src="js/lib/socket.io-1.2.1.js"></script>
 		<script src="js/lib/angular.js"></script>
 		<script src="js/lib/angular-animate.js"></script>
-		<script src="js/lib/underscore-min.js"></script>
-
 		<script src="js/lib/underscore-min.js"></script>
 
 		<script src="js/controllers/main.js"></script>
