made bootstrap local

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Dice Masters Cards</title>
 		<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Alegreya:700'>
-		<link rel="stylesheet" href="http://bootswatch.com/simplex/bootstrap.min.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/angular-animations.css">
 		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/transitions.css">
