--- a/dev-public/index.html
+++ b/dev-public/index.html
@@ -4,7 +4,12 @@
 		<meta charset="UTF-8">
 		<title>Dice Masters Cards</title>
 
-		<link rel="stylesheet" href="css/styles.min.css"/>
+		<!-- build:css css/styles.min.css -->
+		<link rel="stylesheet" href="bower_components/bootswatch/simplex/bootstrap.min.css">
+		<link rel="stylesheet" href="css/angular-animations.css">
+		<link rel="stylesheet" href="css/transitions.css">
+		<link rel="stylesheet" href="css/style.css">
+		<!-- endbuild -->
 	</head>
 	<body ng-app="diceMasters" ng-controller="main" ng-class="{'searching': isSearching(), 'loaded': true}">
 
@@ -37,7 +42,22 @@
 
 		</div>
 
-		<script src="js/scripts.min.js"></script>
+		<!-- build:js js/scripts.min.js -->
+		<script src="bower_components/jquery/dist/jquery.js"></script>
+		<script src="bower_components/socket.io-client/socket.io.js"></script>
+		<script src="bower_components/angular/angular.js"></script>
+		<script src="bower_components/angular-animate/angular-animate.js"></script>
+		<script src="bower_components/underscore/underscore.js"></script>
+
+		<script src="js/controllers/main.js"></script>
+		<script src="js/controllers/search.js"></script>
+		<script src="js/controllers/desk.js"></script>
+
+		<script src="js/factories/cards.js"></script>
+		<script src="js/factories/socketio.js"></script>
+
+		<script src="js/app.js"></script>
+		<!-- endbuild -->
 
 	</body>
 </html>
