--- a/public-dev/index.html
+++ b/public-dev/index.html
@@ -23,7 +23,11 @@
 		<div class="searchArea" ng-controller="search" ng-click="setSearching(true)">
 
 			<div class="form-group search-block">
-				<input autofocus type="text" class="search-box form-control input-lg" placeholder="" ng-model="query" ng-change="searchDebounced(query)" ng-focus="setSearching(true)">
+				<input autofocus type="text"
+					   class="search-box form-control input-lg"
+					   ng-model="query" ng-change="search(query)"
+					   ng-focus="setSearching(true)"
+					   ng-keypress="key($event)">
 			</div>
 
 			<div class="cards">
@@ -43,7 +47,6 @@
 		</div>
 
 		<!-- build:js js/scripts.min.js -->
-		<script src="bower_components/jquery/dist/jquery.js"></script>
 		<script src="bower_components/socket.io-client/socket.io.js"></script>
 		<script src="bower_components/angular/angular.js"></script>
 		<script src="bower_components/angular-animate/angular-animate.js"></script>
