--- a/public-dev/index.html
+++ b/public-dev/index.html
@@ -31,7 +31,8 @@
 					   ng-model="query" ng-change="searchDebounced(query)"
 					   ng-focus="setSearching(true)"
 					   ng-keypress="key($event)"
-					   ng-blur="search(query)">
+					   ng-blur="search(query)"
+					   adr-select-on-click>
 			</div>
 			<div class="cards">
 				<div class="card card-animation" ng-repeat="card in getCards()" ng-click="save(card.name)" ng-class="{'full': card.image}">
@@ -64,6 +65,8 @@
 
 		<script src="js/factories/cards.js"></script>
 		<script src="js/factories/socketio.js"></script>
+
+		<script src="js/directives/select-on-focus.js"></script>
 
 		<script src="js/app.js"></script>
 		<!-- endbuild -->
