--- a/public-dev/index.html
+++ b/public-dev/index.html
@@ -6,6 +6,7 @@
 
 		<!-- build:css css/styles.min.css -->
 		<link rel="stylesheet" href="bower_components/bootswatch/paper/bootstrap.min.css">
+		<link rel="stylesheet" href="bower_components/ngprogress/ngProgress.css">
 		<link rel="stylesheet" href="css/angular-animations.css">
 		<link rel="stylesheet" href="css/preload-images.css">
 		<link rel="stylesheet" href="css/splash-screen.css">
@@ -58,6 +59,7 @@
 		<script src="bower_components/angular/angular.js"></script>
 		<script src="bower_components/angular-animate/angular-animate.js"></script>
 		<script src="bower_components/underscore/underscore.js"></script>
+		<script src="bower_components/ngprogress/build/ngProgress.js"></script>
 
 		<script src="js/controllers/main.js"></script>
 		<script src="js/controllers/search.js"></script>
