--- a/public-dev/index.html
+++ b/public-dev/index.html
@@ -3,8 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Dice Masters Cards</title>
+		<link rel="icon" type="image/png" href="img/dicemasters-storm.png">
 
 		<!-- build:css css/styles.min.css -->
+		<link rel="stylesheet" href="bower_components/nanoscroller/bin/css/nanoscroller.css">
 		<link rel="stylesheet" href="bower_components/bootswatch/paper/bootstrap.min.css">
 		<link rel="stylesheet" href="bower_components/ngprogress/ngProgress.css">
 		<link rel="stylesheet" href="css/angular-animations.css">
@@ -35,7 +37,7 @@
 					   ng-blur="search(query)"
 					   adr-select-on-click>
 			</div>
-			<div class="cards">
+			<div class="cards" scrollable>
 				<div class="card card-animation" ng-repeat="card in getCards()" ng-click="save(card.name)" ng-class="{'full': card.image}">
 					<div class="card-name" ng-if="!card.image">
 						<div class="title">{{card.title}}</div>
@@ -51,15 +53,18 @@
 		</div>
 
 		<div class="splash">
-			<h1>...</h1>
+			<h1></h1>
 		</div>
 
 		<!-- build:js js/scripts.min.js -->
+		<script src="bower_components/jquery/dist/jquery.js"></script>
 		<script src="bower_components/socket.io-client/socket.io.js"></script>
 		<script src="bower_components/angular/angular.js"></script>
 		<script src="bower_components/angular-animate/angular-animate.js"></script>
 		<script src="bower_components/underscore/underscore.js"></script>
 		<script src="bower_components/ngprogress/build/ngProgress.js"></script>
+		<script src="bower_components/nanoscroller/bin/javascripts/jquery.nanoscroller.js"></script>
+		<script src="bower_components/angular-nanoscroller/scrollable.js"></script>
 
 		<script src="js/controllers/main.js"></script>
 		<script src="js/controllers/search.js"></script>
