--- a/public-dev/index.html
+++ b/public-dev/index.html
@@ -20,9 +20,11 @@
 	<body ng-app="diceMasters" ng-controller="main" class="searching" ng-class="{'searching': isSearching(), 'loaded': true}">
 
 		<div class="deskArea" ng-controller="desk" ng-click="setSearching(false)">
-			<div class="card card-animation" ng-repeat="card in getCards()">
-				<div class="card-name" ng-if="!card.image">{{card.name}}</div>
-				<img class="card-image" ng-if="card.image" ng-src="{{card.image}}">
+			<div class="cards" scrollable>
+				<div class="card" ng-repeat="card in getCards()">
+					<div class="card-name" ng-if="!card.image">{{card.name}}</div>
+					<img class="card-image" ng-if="card.image" ng-src="{{card.image}}">
+				</div>
 			</div>
 		</div>
 
@@ -76,6 +78,7 @@
 		<script src="js/directives/select-on-focus.js"></script>
 
 		<script src="js/app.js"></script>
+		<script src="js/non-angular.js"></script>
 		<!-- endbuild -->
 
 	</body>
