--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,11 @@
 	<body ng-app="diceMasters" ng-controller="main" class="searching" ng-class="{'searching': isSearching(), 'loaded': true}">
 
 		<div class="deskArea" ng-controller="desk" ng-click="setSearching(false)">
-			<div class="card card-animation" ng-repeat="card in getCards()">
-				<div class="card-name" ng-if="!card.image">{{card.name}}</div>
-				<img class="card-image" ng-if="card.image" ng-src="{{card.image}}">
+			<div class="cards" scrollable>
+				<div class="card" ng-repeat="card in getCards()">
+					<div class="card-name" ng-if="!card.image">{{card.name}}</div>
+					<img class="card-image" ng-if="card.image" ng-src="{{card.image}}">
+				</div>
 			</div>
 		</div>
 
