--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 		<div class="deskArea" ng-controller="desk" ng-click="setSearching(false)">
 			<div class="cards" scrollable>
-				<div class="card" ng-repeat="card in getCards()">
+				<div class="card card-animation" ng-repeat="card in getCards()">
 					<div class="card-name" ng-if="!card.image">{{card.name}}</div>
 					<img class="card-image" ng-if="card.image" ng-src="{{card.image}}">
 				</div>
@@ -22,14 +22,14 @@
 			<div class="form-group search-block">
 				<input autofocus type="text"
 					   class="search-box form-control input-lg"
-					   placeholder="Search for cards..."
+					   placeholder="e.g. Captain America"
 					   ng-model="query" ng-change="searchDebounced(query)"
 					   ng-focus="setSearching(true)"
 					   ng-keypress="key($event)"
 					   ng-blur="search(query)"
 					   adr-select-on-click>
 			</div>
-			<div class="cards" scrollable>
+			<div class="cards" scrollable="{tabIndex: -1}">
 				<div class="card card-animation" ng-repeat="card in getCards()" ng-click="save(card.name)" ng-class="{'full': card.image}">
 					<div class="card-name" ng-if="!card.image">
 						<div class="title">{{card.title}}</div>
