fixed build tools!

--- a/public-dev/index.html
+++ b/public-dev/index.html
@@ -5,16 +5,16 @@
 		<title>Dice Masters Cards</title>
 		<link rel="icon" type="image/png" href="img/dicemasters-storm.png">
 
-		<!-- build:css css/styles.min.css -->
-		<link rel="stylesheet" href="bower_components/nanoscroller/bin/css/nanoscroller.css">
-		<link rel="stylesheet" href="bower_components/bootswatch/paper/bootstrap.min.css">
-		<link rel="stylesheet" href="bower_components/ngprogress/ngProgress.css">
-		<link rel="stylesheet" href="css/angular-animations.css">
-		<link rel="stylesheet" href="css/preload-images.css">
-		<link rel="stylesheet" href="css/splash-screen.css">
-		<link rel="stylesheet" href="css/transitions.css">
-		<link rel="stylesheet" href="css/search.css">
-		<link rel="stylesheet" href="css/style.css">
+		<!-- build:css -->
+		<link rel="stylesheet" type="text/css" href="bower_components/nanoscroller/bin/css/nanoscroller.css">
+		<link rel="stylesheet" type="text/css" href="bower_components/bootswatch/paper/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="bower_components/ngprogress/ngProgress.css">
+		<link rel="stylesheet" type="text/css" href="css/angular-animations.css">
+		<link rel="stylesheet" type="text/css" href="css/preload-images.css">
+		<link rel="stylesheet" type="text/css" href="css/splash-screen.css">
+		<link rel="stylesheet" type="text/css" href="css/transitions.css">
+		<link rel="stylesheet" type="text/css" href="css/search.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<!-- endbuild -->
 	</head>
 	<body ng-app="diceMasters" ng-controller="main" class="searching" ng-class="{'searching': isSearching(), 'loaded': true}">
@@ -58,7 +58,7 @@
 			<h1></h1>
 		</div>
 
-		<!-- build:js js/scripts.min.js -->
+		<!-- build:js -->
 		<script src="bower_components/jquery/dist/jquery.js"></script>
 		<script src="bower_components/socket.io-client/socket.io.js"></script>
 		<script src="bower_components/angular/angular.js"></script>
