added icon files to git

--- a/public-dev/index.html
+++ b/public-dev/index.html
@@ -27,7 +27,7 @@
 					<img class="card-image" ng-if="card.image" ng-src="{{card.image}}">
 					<div class="hover-overlay">
 						<md-button class="md-fab md-warn remove-button" ng-click="unSave(card.name)" >
-							<md-icon icon="img/ic_remove_24px.svg" style="width: 24px; height: 24px;"></md-icon>
+							<md-icon icon="img/ic_close_24px.svg" style="width: 24px; height: 24px;"></md-icon>
 						</md-button>
 					</div>
 				</div>
